assets/css/style.css
* {
    color: #444;
    font-family: 'Roboto', sans-serif;
    -webkit-font-smoothing: antialiased;
    position: relative;
}

a {
    font-family: inherit;
}

body {
    width: 100%;
    height: 100%;
    background: #f8f8f8;
}

footer {
    padding: 35px 0;
    z-index: 5;
}

h1 {
    font-size: 36px;
}

h1, h2, h3 {
    margin-top: 20px;
    margin-bottom: 10px;
}

h1, h2, h3, h4, h5, h6 {
    color: inherit;
    font-family: 'Roboto Condensed', sans-serif;
    font-weight: 300;
    line-height: 1.1;
}

header {
    width: 100%;
    height: 100%;
    background: #2196F3;
    position: static;
}

header > div {
    animation: bounce 1s;
    -moz-animation: bounce 1s;
    -webkit-animation: bounce 1s;
    position: fixed;
    z-index: 1;
}

html {
    width: 100%;
    height: 100%;
    background-color: #f8f8f8;
}

img {
    -webkit-user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;

}

main {
    background-color: white;
    box-shadow: 0 0 25px rgba(0, 0, 0, 0.14), 0 0 20px rgba(0, 0, 0, 0.26);
    -moz-box-shadow: 0 0 25px rgba(0, 0, 0, 0.14), 0 0 20px rgba(0, 0, 0, 0.26);
    -webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.14), 0 0 20px rgba(0, 0, 0, 0.26);
    z-index: 5;
}

p {
    color: #767676;
    font-size: 16px;
    line-height: 24px;
    margin: 0 0 10px;
}

.align-center {
    text-align: center;
}

.align-right {
    text-align: right;
}

.android {
    width: 90%;
    display: inline-block;
}

.badge {
    background: none;
    display: inline-block;
    font-size: 12px;
    min-width: 10px;
    padding: 3px 7px;
    text-align: center;
    vertical-align: middle;
    width: 6em;
}

.block {
    padding-bottom: 50px;
    padding-top: 50px;
}

.button, .button:focus:not(:active) {
    background-color: #2196F3;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    color: white;
    display: inline-block;
    font-family: inherit;
    font-weight: bold;
    padding: 14px;
    text-decoration: none;
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
}

.button:active {
    background-color: #1976D2;
    color: white;
    text-decoration: none;
}

.button:hover:not(:active) {
    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.10), 0 3px 3px rgba(0, 0, 0, 0.22);
    -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.10), 0 3px 3px rgba(0, 0, 0, 0.22);
    -webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.10), 0 3px 3px rgba(0, 0, 0, 0.22);
    color: white;
    text-decoration: none;
    transform: scale(1.08);
    -moz-transform: scale(1.08);
    -ms-transform: scale(1.08);
    -webkit-transform: scale(1.08);
}

.card {
    background-color: white;
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    display: inline-block;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    margin: 12px 0;
    padding: 14px;
    text-align: center;
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
}

.card:hover {
    box-shadow: 0 14px 15px rgba(0, 0, 0, 0.10), 0 10px 10px rgba(0, 0, 0, 0.22);
    -moz-box-shadow: 0 14px 15px rgba(0, 0, 0, 0.10), 0 10px 10px rgba(0, 0, 0, 0.22);
    -webkit-box-shadow: 0 14px 15px rgba(0, 0, 0, 0.10), 0 10px 10px rgba(0, 0, 0, 0.22);
    transform: scale(1.01);
    -moz-transform: scale(1.01);
    -ms-transform: scale(1.01);
    -webkit-transform: scale(1.01);
}

.card-color {
    border-radius: 2px 2px 0 0;
    -moz-border-radius: 2px 2px 0 0;
    -webkit-border-radius: 2px 2px 0 0;
    margin: -14px -14px 14px -14px;
    padding: 16px;
}

.card-color-blue {
    background-color: #03A9F4;
}

.card-color-green {
    background-color: #8BC34A;
}

.card-color-indigo {
    background-color: #3F51B5;
}

.card-color-red {
    background-color: #f44336;
}

.card-color-teal {
    background-color: #009688;
}

.card-color-yellow {
    background-color: #FDD835;
}

.center {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
}

.col-center {
    display: inline-block;
    float: none;
    vertical-align: middle;
}

.demo {
    margin: 12px 0;
    z-index: 10;
}

.demo-overlay-android {
    width: 84%;
    position: absolute;
    z-index: 20;
}

.demo-overlay-js {
    width: 93%;
    position: absolute;
    transform: translate(-50%, -46%);
    -moz-transform: translate(-50%, -46%);
    -ms-transform: translate(-50%, -46%);
    -webkit-transform: translate(-50%, -46%);
}

.demo-wrapper-android {
    width: 65%;
    margin: 0 auto;
    position: relative;
}

.demo-wrapper-js {
    width: 70%;
    margin: 0 auto;
    position: relative;
}

.demo-wrapper-rpi {
    width: 75%;
    margin: 0 auto;
    position: relative;
}

.emoji {
    height: 20px;
    display: inline;
    transform: translateY(-4px);
    -moz-transform: translateY(-4px);
    -ms-transform: translateY(-4px);
    -webkit-transform: translateY(-4px);
}

.fade-down {
    animation: fade-down 1s;
    -moz-animation: fade-down 1s;
    -webkit-animation: fade-down 1s;
}

.fill-screen {
    width: 100%;
    height: 100%;
}
/* ... */

